fixed some tabbing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <title>react-compact-multiselect Demo</title>
 </head>
 <body>
+  <h3>React compact multi select demo</h3>
   <div id="main"></div>
+  <p>
+  	Stuff lorem ipsum latin
+  </p>
   <script src="react-compact-multiselect.js"></script>
 
 </body>
