--- a/index.html
+++ b/index.html
@@ -22,13 +22,6 @@
           <h2></h2>
         </header>
 
-        <section id="downloads" class="clearfix">
-          <a href="https://github.com/BI/react-compact-multiselect/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="https://github.com/BI/react-compact-multiselect/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
-          <a href="https://github.com/BI/react-compact-multiselect" id="view-on-github" class="button"><span>View on GitHub</span></a>
-        </section>
-
-        <hr>
 <div id="main"></div>
   <p>
     Stuff lorem ipsum latin
@@ -36,12 +29,10 @@
   <script src="react-compact-multiselect.js"></script>
   
         <section id="main_content">
-          <h1>
-<a id="react-compact-multiselect" class="anchor" href="#react-compact-multiselect" aria-hidden="true"><span class="octicon octicon-link"></span></a>react-compact-multiselect</h1>
+          
+<hr>
 
-<p>A "multi select" to select and filter on items in a check list. This component makes use of the <a href="https://github.com/BI/react-drop-button">React-drop-button</a>. The multi select also includes UI improvements to the multi select including  Select All, Deselect All, and the Done button.</p>
-
-<p>Example usage:</p>
+Example usage:
 
 <pre><code>var React = require('react/addons');
 var ReactCompactMultiselect = require('./lib/react-compact-multiselect.jsx');
